<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_scroll">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuestion1"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:width="300dip"
            android:lines="6"
            android:id="@+id/campo1"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/background_text"
            android:hint="Comentario"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuestion2"
            android:id="@+id/textView4"
            android:layout_below="@+id/txtNombre"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:width="300dip"
            android:lines="6"
            android:id="@+id/campo2"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/background_text"
            android:hint="Comentario"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuestion3"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:width="300dip"
        android:lines="6"
        android:id="@+id/campo3"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:background="@color/background_text"
        android:hint="Comentario"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuestion4"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:width="300dip"
            android:lines="6"
            android:id="@+id/campo4"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:background="@color/background_text"
            android:hint="Comentario"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuestion5"
            android:id="@+id/textView7"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:width="300dip"
            android:lines="6"
            android:id="@+id/campo5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:background="@color/background_text"
            android:hint="Comentario"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enviar"
            android:onClick="OnClik"
            android:id="@+id/buttonE"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>